Clean up grpc protocol
